# jupiter

./: .gitignore  CMakeLists.txt  README.md  test.txt
engine/: Makefile  board.h  config.c  engine.c  evaluation.c  fen.c  generation.c  main.c  node.c  notation.c  search.c  tips.txt
engine/pieces/: bishop.c  pawn.c  rook.c
tests/: Makefile
